--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 
 #temperature, #humidity {
   width: 100%;
-  height: 50%;
+  height: 45%;
   margin: 0;
   font-family: Oswald, Helvetica, Arial, sans-serif;
   font-size: 9rem;
@@ -35,4 +35,10 @@ html, body {
   #temperature, #humidity {
     font-size: 5rem;
   }
+}
+
+footer {
+  height: 10%;
+  width: 100%;
+  background-color: #fff;
 }
