--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald);
+@import url(http://fonts.googleapis.com/css?family=Varela+Round);
 
 html, body {
   margin: 0;
@@ -41,4 +42,6 @@ footer {
   height: 10%;
   width: 100%;
   background-color: #fff;
+  font-family: "Varela Round", Helvetica, Arial, sans-serif;
+  color: rgba(0, 0, 0, 0.25);
 }
