--- a/style.css
+++ b/style.css
@@ -43,5 +43,6 @@ footer {
   width: 100%;
   background-color: #fff;
   font-family: "Varela Round", Helvetica, Arial, sans-serif;
+  text-align: right;
   color: rgba(0, 0, 0, 0.25);
 }
