--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald);
-@import url(http://fonts.googleapis.com/css?family=Varela+Round);
+@import url(https://fonts.googleapis.com/css?family=Varela+Round);
 
 html, body {
   margin: 0;
