--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald);
 @import url(https://fonts.googleapis.com/css?family=Varela+Round);
 
 html, body {
   margin: 0;
   height: 100%;
+  font-family: "Varela Round", Helvetica, Arial, sans-serif;
 }
 
 #temperature, #humidity {
   width: 100%;
   height: 45%;
   margin: 0;
-  font-family: Oswald, Helvetica, Arial, sans-serif;
-  font-size: 9rem;
+  font-size: 5rem;
   color: rgba(255, 255, 255, 0.9);
   display: flex;
   justify-content: center;
@@ -28,13 +27,19 @@ html, body {
 
 @media screen and (max-width: 1200px) {
   #temperature, #humidity {
-    font-size: 7rem;
+    font-size: 4rem;
   }
 }
 
 @media screen and (max-width: 980px) {
   #temperature, #humidity {
-    font-size: 5rem;
+    font-size: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  #temperature, #humidity {
+    font-size: 2.5rem;
   }
 }
 
@@ -42,7 +47,6 @@ footer {
   height: 10%;
   width: 100%;
   background-color: #fff;
-  font-family: "Varela Round", Helvetica, Arial, sans-serif;
   text-align: right;
   color: rgba(0, 0, 0, 0.25);
 }
